openpearl-code/testsuite/must_not_compile/00_basics/031_spc_ident_noname1.expect
031_spc_ident_noname1.prl:5:21: ERROR : Syntax error :missing ID at ')'
   SPC x FIXED IDENT();
                     ^
031_spc_ident_noname1.prl:7:0: ERROR : Syntax error :extraneous input 'END' expecting {'MODEND', 'SPECIFY', 'SPC', 'DECLARE', 'DCL', '__cpp__', '__cpp', 'LENGTH', ID}
END;
  ^
