openpearl-code/testsuite/must_not_compile/00_basics/031_spc_ident_noname1.prl
MODULE(m1);

PROBLEM;
   ! must fail -- missing identifier 
   SPC x FIXED IDENT();

END;
MODEND;
